# Enumeration-of-Solution-Parts

./: Cargo.toml  LICENSE  README.md
data/: .gitignore
data/datasets/osm/: README.md  download-links.csv
src/: helpers.rs  lib.rs
src/algorithms/: graphs.rs  mod.rs  scheduling.rs  sorting.rs
src/algorithms/graphs/: mod.rs  search.rs  topological_ordering.rs
src/algorithms/scheduling/: mod.rs  single_machine.rs
src/algorithms/sorting/: counting_sort.rs  incremental_heap_sort.rs  incremental_quick_sort.rs  mod.rs
src/data_generators/: mod.rs  permutations.rs
src/data_generators/graphs/: dag.rs  mod.rs  undirected.rs
src/data_generators/scheduling/: flow_shop.rs  mod.rs  parallel_machines.rs  single_machine.rs  taillard_lcg.rs
src/data_generators/sorting/: mod.rs
src/data_sets/: mod.rs  osm.rs
src/data_structures/: graphs.rs  index.rs  lazy_array.rs  matrix.rs  mod.rs  scheduling_problems.rs  union_find.rs
src/data_structures/graphs/: adjacency_array_graph.rs  directed_adjacency_arrays_graph.rs  directed_edge_list_graph.rs  direction.rs  edge.rs  edge_list_graph.rs  forest.rs  in_out_adjacency_arrays_graph.rs  index.rs  mod.rs  tests.rs
src/data_structures/scheduling_problems/: machine_environment.rs  mod.rs
src/experiments/: aggregator.rs  mod.rs  runner.rs
src/experiments/aggregation/: aggregatable.rs  enumeration.rs  mod.rs  storing_aggregation.rs  (+2 more)
src/io/: csv.rs  download.rs  json.rs  mod.rs
src/random_generators/: graphs.rs  mod.rs  numbers.rs  permutations.rs  scheduling.rs
src/visualization/: helpers_osm.rs  mod.rs  mst.rs
(+46 files in other folders)
