[package]
name = "experiments"
version = "0.1.0"
edition = "2021"
default-run = "experiments"

[lib]
name = "exp_lib"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
csv = "1.3.0"
log = "0.4.20"
num = { version = "0.4.1", features = ["num-bigint"] }
num-bigint = "0.4.4"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
simple_logger = "4.3.0"
