[package]
name = "experiments"
version = "0.1.0"
edition = "2021"
default-run = "experiments"

[lib]
name = "exp_lib"
path = "src/lib.rs"

[profile.release]
debug = true

[dependencies]
binary-heap-plus = "0.5.0"
clap = { version = "4.4.11", features = ["derive"] }
compare = "0.1.0"
csv = "1.3.0"
float-cmp = "0.10.0"
futures-util = "0.3.31"
indicatif = "0.17.9"
itertools = "0.14.0"
log = "0.4.20"
num = { version = "0.4.1", features = ["num-bigint"] }
num-bigint = "0.4.4"
osm4routing = "0.7.2"
rand = "0.8.5"
rand_pcg = "0.3.1"
reqwest = { version = "0.12.12", features = ["stream"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
simple_logger = "5.0.0"
svg = "0.18.0"
tokio = { version = "1.43.0", features = ["full"] }
walkdir = "2.5.0"

[dev-dependencies]
rstest = "0.23.0"
testdrop = "0.1.2"
